--- a/TeamMaker/Estilos/fonts.css
+++ b/TeamMaker/Estilos/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?8v3xpt');
-  src:  url('fonts/icomoon.eot?8v3xpt#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?8v3xpt') format('truetype'),
-    url('fonts/icomoon.woff?8v3xpt') format('woff'),
-    url('fonts/icomoon.svg?8v3xpt#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?6c9cye');
+  src:  url('fonts/icomoon.eot?6c9cye#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?6c9cye') format('truetype'),
+    url('fonts/icomoon.woff?6c9cye') format('woff'),
+    url('fonts/icomoon.svg?6c9cye#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -39,4 +39,7 @@
 }
 .icon-cross:before {
   content: "\ea0f";
+}
+.icon-circle-down:before {
+  content: "\ea43";
 }
