--- a/TeamMaker/Estilos/Style.css
+++ b/TeamMaker/Estilos/Style.css
@@ -842,6 +842,31 @@ form#especialForm{
     height: 5%;
 }
 
+select.genEquipos{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    height: 20%;
+    width: 40%;
+}
+
+input.genEquiposButtonSalir{
+    
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 15%;
+    height: 10%;
+
+}
+
+input.genEquiposButton{
+    width: 25%;
+    height: 25%;
+    border: solid 2px #78C48D;
+    border-radius: 50px;
+    background-color: #a7fabe;
+    color: rgb(24, 24, 24);
+}
+
 input.TeamButton{
 
     font-size: 100%;
