--- a/TeamMaker/Estilos/Style.css
+++ b/TeamMaker/Estilos/Style.css
@@ -63,6 +63,15 @@ main {
     background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
 }
 
+main.generarEquipos {
+    padding-bottom: 7%;
+    padding-top: 4%;
+    text-align: center;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+}
+
 div.divGrupo{
     background-image: -o-linear-gradient(to bottom right, #F0F0F0, #A8FFC0); 
     width: 20%; 
@@ -704,6 +713,15 @@ div.listTodo {
     margin-bottom: -20%;
 }
 
+div.listAlumno {
+    background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+    text-align: center;
+    padding-top: 5%;
+    padding-bottom: 0;
+    height: 100%;
+    margin-bottom: -10%;
+}
+
 /*
 le da estilo a los elementos table posicionandolos, dándoles un tamaño y configurando el borde
 */
@@ -982,6 +1000,11 @@ form#especialForm{
     height: 5%;
 }
 
+form#especialFormAlumno{
+    height: 8%;
+    margin-bottom: 15px;
+}
+
 select.genEquipos{
     margin-top: 1.5%;
     margin-bottom: 1.5%;
@@ -991,7 +1014,7 @@ select.genEquipos{
 
 input.genEquiposButtonSalir{
     
-    margin-top: 10%;
+    margin-top: 5%;
     margin-bottom: 5%;
     width: 15%;
     height: 10%;
